--- a/package.json
+++ b/package.json
@@ -3,12 +3,18 @@
   "version": "0.0.1",
   "description": "Node for ReazonSpeech",
   "main": "reazonspeech.js",
-  "directories": {
-    "example": "examples"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "preinstall": "python setup.py"
+  },
+  "engines": {
+    "node": ">=14.0.0"
+  },
+  "node-red": {
+    "version": ">=1.3.7",
+    "nodes": {
+      "reazonspeech": "reazonspeech.js"
+    }
   },
   "keywords": [
     "node-red",
